[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dropbox-data-merger"
version = "0.1.0"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" },
]
description = "Ferramenta para download e merge de arquivos CSV do Dropbox"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "dropbox>=11.36.0",
    "python-decouple>=3.8",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 