[project]
name = "dropbox-data-merger"
version = "0.1.0"
authors = [
    { name = "Seu Nome", email = "seu.email@exemplo.com" },
]
description = "Ferramenta para download e merge de arquivos CSV do Dropbox"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "dropbox",
    "python-decouple",
    "dask[dataframe]",
    "dask[distributed]",
    "redis",
    "beautifulsoup4",
    "requests",
    "pyspark>=3.5.0",
    "pyarrow>=14.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[build-system]
requires = ["setuptools>=45",
            "wheel",
            "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
start_app = "dropbox_data:main"

[tool.setuptools]
packages = ["dropbox_data"]


[tool.setuptools_scm]
write_to = "_version.py"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "backup",
    "development_scripts",
    "docs"
]


line-length = 100
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]

fixable = ["ALL"]
unfixable = ["F401"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "celery"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "tiktoken"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.storage.blob"
ignore_missing_imports = true